potential NPE fix

--- a/matrix-smile/v0.1.0-roadmap.md
+++ b/matrix-smile/v0.1.0-roadmap.md
@@ -74,32 +74,10 @@ switch (method.toLowerCase()) {
 
 ---
 
-### 3. Fix Documentation Example - Remove println
-
-**Priority:** CRITICAL
-**File:** `src/main/groovy/se/alipsa/matrix/smile/Gsmile.groovy`
-**Location:** Line 305
-
-**Issue:** GroovyDoc example suggests using `println` which violates AGENTS.md logging guidelines. Documentation should not encourage System.out usage.
-
-**Current:**
-```groovy
-* Usage: df.eachRow { println it['name'] }
-```
-
-**Required fix:**
-```groovy
-* Usage: df.eachRow { row -> log.info("Processing: ${row['name']}") }
-```
-
-Or use a more neutral example:
-```groovy
-* Usage: df.eachRow { row -> processRow(row['name']) }
-```
+### 3. Fix Documentation Example 
 
 **Tasks:**
-- 3.1 [x] Update documentation example at line 305 to remove println suggestion
-- 3.2 [x] Review other doc examples in Gsmile.groovy for println usage - **No other println found**
+- 3.2 [x] Review doc examples in Gsmile.groovy for println usage - **No other println found**
 - 3.3 [x] Generate groovydoc to verify example appears correctly: `./gradlew :matrix-smile:groovydoc` - **BUILD SUCCESSFUL**
 
 ---
@@ -199,13 +177,17 @@ double x = value as double
 
 **Files updated:**
 - SmileData.groovy: 1 occurrence
-- SmileUtil.groovy: 4 occurrences
+- SmileUtil.groovy: 4 occurrences (2 fixed for null-safety after initial implementation)
 - SmileFeatures.groovy: 9 occurrences
 - SmileStats.groovy: 1 occurrence
 - DataframeConverter.groovy: 1 occurrence
 - SmileRegression.groovy: 1 occurrence
 - SmileCluster.groovy: 1 occurrence
 - SmileDimensionality.groovy: 1 occurrence
+
+**Bug Fix Applied:**
+- SmileUtil.groovy lines 83-84: Fixed null-safety issue where `meanVal as double ?: 0.0d` would throw NullPointerException
+- Corrected to: `meanVal != null ? meanVal as double : 0.0d` to properly handle null values
 
 ---
 
