--- a/matrix-xchart/v0.2.3-roadmap.md
+++ b/matrix-xchart/v0.2.3-roadmap.md
@@ -107,11 +107,11 @@ All code in the matrix-xchart module now uses **@CompileStatic with full static 
 **Issue:** Two test methods were empty placeholders with TODO comments.
 
 **Empty Tests:**
-1. `testDesityHistogram()` - Line ~27
+1. `testDensityHistogram()` - Line ~27
 2. `testFrequencyHistogramCustom()` - Line ~54
 
 **Tasks:**
-- 2.1 [x] Implement testDesityHistogram() to test density histogram functionality - **COMPLETE**
+- 2.1 [x] Implement testDensityHistogram() to test density histogram functionality - **COMPLETE**
 - 2.2 [x] Implement testFrequencyHistogramCustom() to test custom frequency histogram - **COMPLETE**
 - 2.3 [x] Run tests: `./gradlew :matrix-xchart:test --tests "HistogramChartTest"` - **SUCCESS (5 tests passed)**
 
@@ -119,7 +119,7 @@ All code in the matrix-xchart module now uses **@CompileStatic with full static 
 
 **Implementation Details:**
 
-**testDesityHistogram():**
+**testDensityHistogram():**
 - Creates histogram with Scott's rule for optimal bin width
 - Sets custom title and X-axis label
 - Exports to PNG and verifies file creation
@@ -135,7 +135,7 @@ All code in the matrix-xchart module now uses **@CompileStatic with full static 
 **Example Implementation:**
 ```groovy
 @Test
-void testDesityHistogram() {
+void testDensityHistogram() {
   Matrix data = Matrix.builder()
       .data(values: [1.1, 1.5, 2.0, 2.3, 2.8, 3.2, 3.5, 4.0, 4.5, 5.0])
       .types([Double])
@@ -145,7 +145,7 @@ void testDesityHistogram() {
   assertNotNull(chart)
   assertNotNull(chart.xchart)
 
-  File output = new File("build/testDesityHistogram.png")
+  File output = new File("build/testDensityHistogram.png")
   chart.exportPng(output)
   assertTrue(output.exists())
 }
