--- a/matrix-datasets/v2.1.2-roadmap.md
+++ b/matrix-datasets/v2.1.2-roadmap.md
@@ -57,7 +57,7 @@ assertEquals(12, mtcars.columnCount(), 'Mtcars dataset should have 11 columns')
 
 ## 2. Code Quality Improvements
 
-### 2.1 [ ] Add null safety to mapDataSet() method
+### 2.1 [x] Add null safety to mapDataSet() method
 **Severity:** MEDIUM
 **Location:** `src/main/groovy/se/alipsa/matrix/datasets/Dataset.groovy:212`
 
@@ -71,7 +71,7 @@ def minOrder = Stat.min(sub['order']) - 1  // Could fail if sub is empty
 
 ---
 
-### 2.2 [ ] Use consistent Matrix naming approach
+### 2.2 [x] Use consistent Matrix naming approach
 **Severity:** LOW
 **Location:** `src/main/groovy/se/alipsa/matrix/datasets/Dataset.groovy`
 
@@ -84,7 +84,7 @@ def minOrder = Stat.min(sub['order']) - 1  // Could fail if sub is empty
 
 ---
 
-### 2.3 [ ] Replace generic Exception with FileNotFoundException
+### 2.3 [x] Replace generic Exception with FileNotFoundException
 **Severity:** LOW
 **Location:** `src/main/groovy/se/alipsa/matrix/datasets/util/FileUtil.groovy:27, 32, 35`
 
@@ -94,7 +94,7 @@ def minOrder = Stat.min(sub['order']) - 1  // Could fail if sub is empty
 
 ---
 
-### 2.4 [ ] Use string interpolation instead of concatenation
+### 2.4 [x] Use string interpolation instead of concatenation
 **Severity:** LOW
 **Location:** `src/main/groovy/se/alipsa/matrix/datasets/util/FileUtil.groovy:27, 32, 35, 98`
 
@@ -141,7 +141,7 @@ void testFetchDataWithNonExistentDataset() {
 
 ---
 
-### 3.2 [ ] Add edge case tests to DatasetTest
+### 3.2 [x] Add edge case tests to DatasetTest
 **Severity:** LOW
 **Location:** `src/test/groovy/datasets/DatasetTest.groovy`
 
