--- a/matrix-datasets/v2.1.2-roadmap.md
+++ b/matrix-datasets/v2.1.2-roadmap.md
@@ -155,7 +155,7 @@ void testFetchDataWithNonExistentDataset() {
 
 ## 4. Documentation Updates
 
-### 4.1 [ ] Update README.md version compatibility table
+### 4.1 [x] Update README.md version compatibility table
 **Severity:** LOW
 **Location:** `README.md:80-88`
 
