--- a/matrix-datasets/v2.1.2-roadmap.md
+++ b/matrix-datasets/v2.1.2-roadmap.md
@@ -170,22 +170,17 @@ void testFetchDataWithNonExistentDataset() {
 
 ## 5. Future Enhancements (Post 2.1.2)
 
-### 5.1 [ ] Add fromFile() convenience method
-Add a method similar to `fromUrl()` for local files:
-```groovy
-static Matrix fromFile(String filePath, String delimiter = ',', String stringQuote = '') {
-  Matrix.builder().data(FileUtil.checkFilePath(filePath), delimiter, stringQuote).build()
-}
-```
+### 5.1 [~] Add fromFile() convenience method
+**Status:** Skipped - Not needed. The matrix-csv module already provides comprehensive CSV import functionality from various sources.
 
 ---
 
-### 5.2 [ ] Add Logger implementation
+### 5.2 [x] Add Logger implementation
 Per AGENTS.md guidelines, add logging support using `se.alipsa.matrix.core.util.Logger` for error conditions and debugging.
 
 ---
 
-### 5.3 [ ] Refactor mapData() to use Map lookup
+### 5.3 [x] Refactor mapData() to use Map lookup
 Replace the if-statement chain with a Map lookup for better maintainability:
 ```groovy
 private static final Map<String, Closure<Matrix>> MAP_PROVIDERS = [
@@ -199,12 +194,12 @@ private static final Map<String, Closure<Matrix>> MAP_PROVIDERS = [
 
 ## Summary
 
-| Priority | Task | Count |
-|----------|------|-------|
-| HIGH | Bug fixes (crash prevention) | 1 |
-| MEDIUM | Bug fixes + Code quality + Tests | 4 |
-| LOW | Code quality + Documentation | 5 |
-| Future | Enhancements | 3 |
+| Priority | Task                             | Count |
+|----------|----------------------------------|-------|
+| HIGH     | Bug fixes (crash prevention)     | 1     |
+| MEDIUM   | Bug fixes + Code quality + Tests | 4     |
+| LOW      | Code quality + Documentation     | 5     |
+| Future   | Enhancements                     | 3     |
 
 **Total tasks for 2.1.2 release:** 10 (excluding future enhancements)
 
