Tablesaw roadmap 0.2.2 item 3 complete

--- a/matrix-tablesaw/v0.2.2-roadmap.md
+++ b/matrix-tablesaw/v0.2.2-roadmap.md
@@ -252,7 +252,7 @@ Add comprehensive Javadoc/Groovydoc to all public classes and methods, including
 **High Priority:**
 - [x] Add compileTestJava configuration ✅
 - [x] Add -Xlint:unchecked to compileGroovy ✅
-- [ ] Update README version from 0.2.1 to 0.2.2
+- [x] Update README version from 0.2.1 to 0.2.2 ✅
 
 **Medium Priority:**
 - [ ] Add @SuppressWarnings to createColumn() method
@@ -301,7 +301,8 @@ Add comprehensive Javadoc/Groovydoc to all public classes and methods, including
 **Completed Items:**
 - ✅ Added compileTestJava configuration (High Priority #1)
 - ✅ Added -Xlint:unchecked to compileGroovy (High Priority #2)
-**Next Review:** After completing remaining High priority items
+- ✅ Updated README version from 0.2.1 to 0.2.2 (High Priority #3)
+**Next Steps:** All High Priority items complete. Begin Medium Priority items.
 
 **Compatibility:**
 - Requires matrix-core: 3.6.0+
