--- a/matrix-tablesaw/v0.2.2-roadmap.md
+++ b/matrix-tablesaw/v0.2.2-roadmap.md
@@ -255,7 +255,7 @@ Add comprehensive Javadoc/Groovydoc to all public classes and methods, including
 - [x] Update README version from 0.2.1 to 0.2.2 ✅
 
 **Medium Priority:**
-- [ ] Add @SuppressWarnings to createColumn() method
+- [x] Add @SuppressWarnings to createColumn() method ✅
 - [ ] Remove duplicate BigDecimalColumn check
 - [ ] Update POI version in release.md
 - [ ] Complete release notes for v0.2.2
@@ -302,7 +302,8 @@ Add comprehensive Javadoc/Groovydoc to all public classes and methods, including
 - ✅ Added compileTestJava configuration (High Priority #1)
 - ✅ Added -Xlint:unchecked to compileGroovy (High Priority #2)
 - ✅ Updated README version from 0.2.1 to 0.2.2 (High Priority #3)
-**Next Steps:** All High Priority items complete. Begin Medium Priority items.
+- ✅ Added @SuppressWarnings to createColumn() method (Medium Priority #4)
+**Next Steps:** Continue with Medium Priority items.
 
 **Compatibility:**
 - Requires matrix-core: 3.6.0+
