Tablesaw roadmap 0.2.2 item 5 complete

--- a/matrix-tablesaw/v0.2.2-roadmap.md
+++ b/matrix-tablesaw/v0.2.2-roadmap.md
@@ -256,7 +256,7 @@ Add comprehensive Javadoc/Groovydoc to all public classes and methods, including
 
 **Medium Priority:**
 - [x] Add @SuppressWarnings to createColumn() method ✅
-- [ ] Remove duplicate BigDecimalColumn check
+- [x] Remove duplicate BigDecimalColumn check ✅
 - [ ] Update POI version in release.md
 - [ ] Complete release notes for v0.2.2
 - [ ] Document deprecated OdsReadOptions methods in release notes
