Tablesaw roadmap 0.2.2 item 6 complete

--- a/matrix-tablesaw/v0.2.2-roadmap.md
+++ b/matrix-tablesaw/v0.2.2-roadmap.md
@@ -257,7 +257,7 @@ Add comprehensive Javadoc/Groovydoc to all public classes and methods, including
 **Medium Priority:**
 - [x] Add @SuppressWarnings to createColumn() method ✅
 - [x] Remove duplicate BigDecimalColumn check ✅
-- [ ] Update POI version in release.md
+- [x] Update POI version in release.md ✅
 - [ ] Complete release notes for v0.2.2
 - [ ] Document deprecated OdsReadOptions methods in release notes
 - [ ] Fix TODOs in BigDecimalColumn (asBytes, byte array handling, toBigDecimal extensions)
@@ -303,7 +303,9 @@ Add comprehensive Javadoc/Groovydoc to all public classes and methods, including
 - ✅ Added -Xlint:unchecked to compileGroovy (High Priority #2)
 - ✅ Updated README version from 0.2.1 to 0.2.2 (High Priority #3)
 - ✅ Added @SuppressWarnings to createColumn() method (Medium Priority #4)
-**Next Steps:** Continue with Medium Priority items.
+- ✅ Removed duplicate BigDecimalColumn check (Medium Priority #5)
+- ✅ Updated POI version in release.md (Medium Priority #6)
+**Next Steps:** Continue with remaining Medium Priority items.
 
 **Compatibility:**
 - Requires matrix-core: 3.6.0+
