--- a/matrix-tablesaw/v0.2.2-roadmap.md
+++ b/matrix-tablesaw/v0.2.2-roadmap.md
@@ -258,8 +258,8 @@ Add comprehensive Javadoc/Groovydoc to all public classes and methods, including
 - [x] Add @SuppressWarnings to createColumn() method ✅
 - [x] Remove duplicate BigDecimalColumn check ✅
 - [x] Update POI version in release.md ✅
-- [ ] Complete release notes for v0.2.2
-- [ ] Document deprecated OdsReadOptions methods in release notes
+- [x] Complete release notes for v0.2.2 ✅
+- [x] Document deprecated OdsReadOptions methods in release notes ✅
 - [ ] Fix TODOs in BigDecimalColumn (asBytes, byte array handling, toBigDecimal extensions)
 - [ ] Add JaCoCo plugin and improve test coverage
 - [ ] Add comprehensive Javadoc to undocumented classes
@@ -305,7 +305,9 @@ Add comprehensive Javadoc/Groovydoc to all public classes and methods, including
 - ✅ Added @SuppressWarnings to createColumn() method (Medium Priority #4)
 - ✅ Removed duplicate BigDecimalColumn check (Medium Priority #5)
 - ✅ Updated POI version in release.md (Medium Priority #6)
-**Next Steps:** Continue with remaining Medium Priority items.
+- ✅ Completed release notes for v0.2.2 (Medium Priority #7)
+- ✅ Documented deprecated OdsReadOptions methods in release notes (Medium Priority #8)
+**Next Steps:** Continue with remaining implementation items (BigDecimalColumn fixes, test coverage, Javadoc).
 
 **Compatibility:**
 - Requires matrix-core: 3.6.0+
