--- a/matrix-tablesaw/v0.2.2-roadmap.md
+++ b/matrix-tablesaw/v0.2.2-roadmap.md
@@ -260,7 +260,7 @@ Add comprehensive Javadoc/Groovydoc to all public classes and methods, including
 - [x] Update POI version in release.md ✅
 - [x] Complete release notes for v0.2.2 ✅
 - [x] Document deprecated OdsReadOptions methods in release notes ✅
-- [ ] Fix TODOs in BigDecimalColumn (asBytes, byte array handling, toBigDecimal extensions)
+- [x] Fix TODOs in BigDecimalColumn (asBytes, byte array handling, toBigDecimal extensions) ✅
 - [ ] Add JaCoCo plugin and improve test coverage
 - [ ] Add comprehensive Javadoc to undocumented classes
 
@@ -307,7 +307,8 @@ Add comprehensive Javadoc/Groovydoc to all public classes and methods, including
 - ✅ Updated POI version in release.md (Medium Priority #6)
 - ✅ Completed release notes for v0.2.2 (Medium Priority #7)
 - ✅ Documented deprecated OdsReadOptions methods in release notes (Medium Priority #8)
-**Next Steps:** Continue with remaining implementation items (BigDecimalColumn fixes, test coverage, Javadoc).
+- ✅ Fixed TODOs in BigDecimalColumn (Medium Priority #9)
+**Next Steps:** Continue with remaining implementation items (test coverage, Javadoc).
 
 **Compatibility:**
 - Requires matrix-core: 3.6.0+
